Add deleting and adding new comments functionality